using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_RUN = "run";
    public const string ANIM_FALL = "fall";
    public const string ANIM_JUMP = "jump";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_DOUBLEJUMP = "doublejump";
    public const string ANIM_HIT = "hit";
    public const string ANIM_DEATH = "death";
    public const string ANIM_WALLJUMP = "walljump";

    public const string TAG_ITEMS = "items";
    public const string TAG_TRAP = "trap";
}
